--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>model</artifactId>
+    <artifactId>dao</artifactId>
     <packaging>jar</packaging>
 
     <parent>
@@ -13,35 +13,19 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+
     <dependencies>
+        <dependency>
+            <groupId>com.epam.trainning</groupId>
+            <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.epam.trainning</groupId>
-            <artifactId>utils</artifactId>
+            <artifactId>dao-api</artifactId>
             <version>${project.version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>RELEASE</version>
-            <scope>test</scope>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>3.0.1</version>
         </dependency>
     </dependencies>
-
 
 </project>
