--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <modules>
         <module>model</module>
         <module>utils</module>
+        <module>dao-api</module>
+        <module>dao</module>
     </modules>
 
     <name>Aggregator for user-management</name>
@@ -17,17 +19,50 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.version>1.0-SNAPSHOT</project.version>
+
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.version>4.12</junit.version>
+        <google_code_find_bug.version>3.0.1</google_code_find_bug.version>
 
         <!--env.JAVA_HOME-->
         <!--env.PATH-->
         <!--${java.home}-->
     </properties>
 
+
+    <distributionManagement>
+        <site>
+            <id>${project.artifactId}</id>
+            <url>${project.baseUri}</url>
+        </site>
+    </distributionManagement>
+
     <dependencyManagement>
         <dependencies>
+
+            <!--<dependency>-->
+                <!--<groupId>com.epam.trainning</groupId>-->
+                <!--<artifactId>model</artifactId>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+            <!--<groupId>com.epam.trainning</groupId>-->
+            <!--<artifactId>utils</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+            <!--</dependency>-->
+
+            <!--<dependency>-->
+                <!--<groupId>com.epam.trainning</groupId>-->
+                <!--<artifactId>dao</artifactId>-->
+            <!--</dependency>-->
+
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
+                <version>${google_code_find_bug.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -35,6 +70,7 @@
                 <scope>test</scope>
                 <optional>true</optional>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
