--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.version>1.0-SNAPSHOT</project.version>
 
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <junit.version>4.12</junit.version>
         <google_code_find_bug.version>3.0.1</google_code_find_bug.version>
         <spring.version>4.3.6.RELEASE</spring.version>
         <h2.version>1.4.193</h2.version>
 
-        <!--env.JAVA_HOME-->
-        <!--env.PATH-->
-        <!--${java.home}-->
     </properties>
 
 
@@ -125,8 +122,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
                     </configuration>
                 </plugin>
 
