Added log4j2 in UserDaoImpl and User. Test methods don't have Logger.

--- a/.gitignore
+++ b/.gitignore
@@ -44,10 +44,12 @@ hs_err_pid*
 .idea/**/uiDesigner.xml
 
 # File with iml extensions, target folder and files inside .idea folder.
+# Folder staging
 
 *.iml
 **/target
 **/.idea
+**/staging
 
 # Gradle:
 .idea/**/gradle.xml
