--- a/model/pom.xml
+++ b/model/pom.xml
@@ -19,13 +19,20 @@
             <groupId>com.epam.trainning</groupId>
             <artifactId>utils</artifactId>
             <version>${project.version}</version>
-            <!--<scope>test</scope>-->
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
         </dependency>
 
         <dependency>
