--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 
     <modules>
         <module>model</module>
-        <module>utils</module>
         <module>dao-api</module>
         <module>dao</module>
         <module>test-db</module>
+        <module>utils</module>
     </modules>
 
     <name>Aggregator for user-management</name>
@@ -20,7 +20,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.version>1.0-SNAPSHOT</project.version>
 
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
@@ -28,6 +27,7 @@
         <google_code_find_bug.version>3.0.1</google_code_find_bug.version>
         <spring.version>4.3.6.RELEASE</spring.version>
         <h2.version>1.4.193</h2.version>
+        <log4j.verison>2.8</log4j.verison>
 
     </properties>
 
@@ -41,21 +41,6 @@
 
     <dependencyManagement>
         <dependencies>
-
-            <!--<dependency>-->
-            <!--<groupId>com.epam.trainning</groupId>-->
-            <!--<artifactId>model</artifactId>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-            <!--<groupId>com.epam.trainning</groupId>-->
-            <!--<artifactId>utils</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-            <!--</dependency>-->
-
-            <!--<dependency>-->
-            <!--<groupId>com.epam.trainning</groupId>-->
-            <!--<artifactId>dao</artifactId>-->
-            <!--</dependency>-->
 
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
@@ -110,6 +95,21 @@
                 <optional>true</optional>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.verison}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.verison}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-jcl</artifactId>
+                <version>${log4j.verison}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
