--- a/model/pom.xml
+++ b/model/pom.xml
@@ -9,14 +9,14 @@
 
     <parent>
         <artifactId>user-management</artifactId>
-        <groupId>com.epam.trainning</groupId>
+        <groupId>com.epam.training</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
 
         <dependency>
-            <groupId>com.epam.trainning</groupId>
+            <groupId>com.epam.training</groupId>
             <artifactId>utils</artifactId>
             <version>${project.version}</version>
         </dependency>
