--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -9,7 +9,7 @@
 
     <parent>
         <artifactId>user-management</artifactId>
-        <groupId>com.epam.trainning</groupId>
+        <groupId>com.epam.training</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
