--- a/dao-api/pom.xml
+++ b/dao-api/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>model</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
 
     </dependencies>
 
