--- a/service/pom.xml
+++ b/service/pom.xml
@@ -37,6 +37,11 @@
         </dependency>
         <dependency>
             <groupId>com.epam.training</groupId>
+            <artifactId>utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.epam.training</groupId>
             <artifactId>test-db</artifactId>
             <version>${project.version}</version>
         </dependency>
