--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>test-db</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.epam.training</groupId>
+            <artifactId>utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
