--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>test-db</module>
         <module>utils</module>
         <module>service</module>
+        <module>rest-app</module>
     </modules>
 
     <name>Aggregator for user-management</name>
@@ -32,6 +33,10 @@
         <log4j.verison>2.8</log4j.verison>
         <easymock.version>3.4</easymock.version>
 
+        <servlet-api.version>3.1.0</servlet-api.version>
+        <jackson.version>2.8.8</jackson.version>
+        <jsonassert.version>1.5.0</jsonassert.version>
+
     </properties>
 
 
@@ -44,13 +49,6 @@
 
     <dependencyManagement>
         <dependencies>
-
-            <dependency>
-                <groupId>com.google.code.findbugs</groupId>
-                <artifactId>jsr305</artifactId>
-                <version>${google_code_find_bug.version}</version>
-            </dependency>
-
 
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -82,6 +80,11 @@
                 <artifactId>spring-test</artifactId>
                 <version>${spring.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring.version}</version>
             </dependency>
 
             <dependency>
@@ -119,6 +122,31 @@
                 <artifactId>easymock</artifactId>
                 <version>${easymock.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${servlet-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.skyscreamer</groupId>
+                <artifactId>jsonassert</artifactId>
+                <version>${jsonassert.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -151,6 +179,12 @@
                             </execution>
                         </executions>
                     </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.eclipde.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.4.2.v20170220</version>
                 </plugin>
 
                 <plugin>
