--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
     <modules>
         <module>model</module>
+        <module>dao-api</module>
     </modules>
 
     <properties>
@@ -30,6 +31,8 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
+        <junit.version>4.12</junit.version>
+        <log4j.version>2.8.2</log4j.version>
     </properties>
 
 
@@ -41,6 +44,28 @@
                 <groupId>com.segniertomato.work</groupId>
                 <artifactId>model</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-jcl</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
 
         </dependencies>
@@ -162,10 +187,10 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.7</version>
                 <configuration>
-                    <linkXref>true</linkXref>
+                    <linkXRef>true</linkXRef>
                     <sourceEncoding>utf-8</sourceEncoding>
-                    <minimunTokens>100</minimunTokens>
-                    <targetJDK>1.8</targetJDK>
+                    <minimumTokens>100</minimumTokens>
+                    <targetJdk>1.8</targetJdk>
                 </configuration>
                 <reportSets>
                     <reportSet>
