--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
         <junit.version>4.12</junit.version>
         <log4j.version>2.8.2</log4j.version>
+        <spring.version>4.3.8.RELEASE</spring.version>
     </properties>
 
 
@@ -45,6 +46,12 @@
                 <artifactId>model</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.segniertomato.work</groupId>
+                <artifactId>dao-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>junit</groupId>
@@ -66,6 +73,12 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-jcl</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring.version}</version>
             </dependency>
 
         </dependencies>
