Full implemention of EmployeeDao and InvestigationDao. Added new class - Pair. Changed getEmployeeRating's returned type from Map<Integer, Integer> to List<Pair<Integer, Integer>> in InvestigationDao interface.

--- a/dao/src/main/resources/queries.properties
+++ b/dao/src/main/resources/queries.properties
@@ -56,4 +56,11 @@ sql.getEmployee'sInvestigationsId=SELECT investigation_id FROM investigation_sta
 
 sql.deleteEmployeeById=DELETE FROM staff WHERE employee_id = :employee_id
 
-sql.getEmployeesRating=
+sql.getEmployeesRating=SELECT staff.employee_id, ROUND( cast(staff.count(relations.investigation_id) as FLOAT) / inv.all_investigations_count *100 ) as rating \
+                                            FROM staff \
+                                            LEFT JOIN investigation_staff_relations as relations \
+                                            ON staff.employee_id = relations.employee_id \
+                                            CROSS JOIN (SELECT investigation.count(*) as all_investigations_count FROM investigation) AS inv \
+                                            GROUP BY staff.employee_id \
+                                            ORDER BY staff.employee_id \
+                                            LIMIT :limit OFFSET :offset
