--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>dao-api</module>
         <module>dao</module>
         <module>test-db</module>
+        <module>service-api</module>
+        <module>service</module>
     </modules>
 
     <properties>
@@ -37,6 +39,7 @@
         <log4j.version>2.8.2</log4j.version>
         <spring.version>4.3.8.RELEASE</spring.version>
         <h2.version>1.4.195</h2.version>
+        <easymock.version>3.4</easymock.version>
     </properties>
 
 
@@ -61,6 +64,16 @@
             <dependency>
                 <groupId>com.segniertomato.work</groupId>
                 <artifactId>dao</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.segniertomato.work</groupId>
+                <artifactId>service-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.segniertomato.work</groupId>
+                <artifactId>service</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -92,6 +105,12 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.easymock</groupId>
+                <artifactId>easymock</artifactId>
+                <version>${easymock.version}</version>
             </dependency>
 
             <dependency>
