--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>rest-app</module>
         <module>client-api</module>
         <module>client-rest</module>
+        <module>web-app</module>
     </modules>
 
     <name>Aggregator for user-management</name>
@@ -38,6 +39,8 @@
         <servlet-api.version>3.1.0</servlet-api.version>
         <jackson.version>2.8.8</jackson.version>
         <jsonassert.version>1.5.0</jsonassert.version>
+
+        <thymeleaf.version>3.0.5.RELEASE</thymeleaf.version>
 
     </properties>
 
@@ -155,6 +158,17 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.thymeleaf</groupId>
+                <artifactId>thymeleaf</artifactId>
+                <version>${thymeleaf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.thymeleaf</groupId>
+                <artifactId>thymeleaf-spring4</artifactId>
+                <version>${thymeleaf.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -175,7 +189,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>2.6</version>
                     <configuration>
                         <executions>
                             <execution>
@@ -279,7 +293,7 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.7</version>
                 <configuration>
-                    <linkXref>true</linkXref>
+                    <linkXRef>true</linkXRef>
                     <sourceEncoding>utf-8</sourceEncoding>
                     <minimumTokens>100</minimumTokens>
                     <targetJdk>1.5</targetJdk>
@@ -303,6 +317,7 @@
                         <format>html</format>
                         <format>xml</format>
                     </formats>
+                    <check/>
                 </configuration>
             </plugin>
 
