--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>test-db</module>
         <module>service-api</module>
         <module>service</module>
+        <module>rest-app</module>
     </modules>
 
     <properties>
@@ -40,6 +41,10 @@
         <spring.version>4.3.8.RELEASE</spring.version>
         <h2.version>1.4.195</h2.version>
         <easymock.version>3.4</easymock.version>
+        <jackson.version>2.8.8.1</jackson.version>
+        <jackson.jsr310.version>2.8.8</jackson.jsr310.version>
+        <json.assert.version>1.5.0</json.assert.version>
+        <javax.servlet.version>3.1.0</javax.servlet.version>
     </properties>
 
 
@@ -74,6 +79,11 @@
             <dependency>
                 <groupId>com.segniertomato.work</groupId>
                 <artifactId>service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.segniertomato.work</groupId>
+                <artifactId>rest-app</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -114,6 +124,29 @@
             </dependency>
 
             <dependency>
+                <groupId>org.skyscreamer</groupId>
+                <artifactId>jsonassert</artifactId>
+                <version>${json.assert.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson.jsr310.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javax.servlet.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
@@ -144,6 +177,11 @@
                 <version>${spring.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -166,6 +204,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.4</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.4.5.v20170502</version>
                 </plugin>
 
                 <plugin>
