--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,11 @@
 
         <junit.version>4.12</junit.version>
         <log4j.version>2.8.2</log4j.version>
-        <spring.version>4.3.8.RELEASE</spring.version>
+        <spring.version>4.3.6.RELEASE</spring.version>
         <h2.version>1.4.195</h2.version>
         <easymock.version>3.4</easymock.version>
-        <jackson.version>2.8.8.1</jackson.version>
+        <jackson.databind.version>2.8.8.1</jackson.databind.version>
+        <jackson.annotations.version>2.8.8</jackson.annotations.version>
         <jackson.jsr310.version>2.8.8</jackson.jsr310.version>
         <json.assert.version>1.5.0</json.assert.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
@@ -121,23 +122,30 @@
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
                 <version>${easymock.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.skyscreamer</groupId>
                 <artifactId>jsonassert</artifactId>
                 <version>${json.assert.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson.databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${jackson.jsr310.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.annotations.version}</version>
             </dependency>
 
             <dependency>
@@ -182,6 +190,11 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -209,7 +222,8 @@
                 <plugin>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
-                    <version>9.4.5.v20170502</version>
+                    <!--<version>9.4.5.v20170502</version>-->
+                    <version>9.4.3.v20170317</version>
                 </plugin>
 
                 <plugin>
@@ -218,7 +232,7 @@
                     <version>2.17</version>
                     <configuration>
                         <enableRulesSummary>true</enableRulesSummary>
-                        <consuleOutput>true</consuleOutput>
+                        <consoleOutput>true</consoleOutput>
                     </configuration>
                 </plugin>
 
@@ -227,6 +241,8 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.20</version>
                     <configuration>
+                        <reuseForks>true</reuseForks>
+                        <!--<forkCount>6</forkCount>-->
                         <includes>
                             <include>**/Test*.java</include>
                             <include>**/*Test.java</include>
@@ -283,7 +299,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
                 <configuration>
-                    <author>Yarmaliuk Siarhei</author>
+                    <defaultAuthor>Yarmaliuk Siarhei</defaultAuthor>
                     <defaultVersion>${project.version}</defaultVersion>
                     <show>public</show>
                 </configuration>
@@ -331,6 +347,7 @@
                         <format>html</format>
                         <format>xml</format>
                     </formats>
+                    <check/>
                 </configuration>
             </plugin>
 
