--- a/rest-app/pom.xml
+++ b/rest-app/pom.xml
@@ -44,10 +44,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.springframework</groupId>-->
-        <!--<artifactId>spring-context</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -105,6 +105,9 @@
                     <httpConnector>
                         <port>8088</port>
                     </httpConnector>
+                    <stopPort>8088</stopPort>
+                    <stopKey>stop</stopKey>
+                    <stopWait>10</stopWait>
                 </configuration>
             </plugin>
         </plugins>
