--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
         <junit.version>4.12</junit.version>
         <log4j.version>2.8.2</log4j.version>
-        <spring.version>4.3.6.RELEASE</spring.version>
+        <spring.version>4.3.8.RELEASE</spring.version>
         <h2.version>1.4.195</h2.version>
         <easymock.version>3.4</easymock.version>
         <jackson.databind.version>2.8.8.1</jackson.databind.version>
@@ -210,6 +210,7 @@
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
+                        <useIncrementalCompilation>false</useIncrementalCompilation>
                     </configuration>
                 </plugin>
 
@@ -222,8 +223,7 @@
                 <plugin>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
-                    <!--<version>9.4.5.v20170502</version>-->
-                    <version>9.4.3.v20170317</version>
+                    <version>9.4.5.v20170502</version>
                 </plugin>
 
                 <plugin>
